<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Google Assistant Capability for Creating Reminders -->
    <capability android:name="actions.intent.CREATE_THING">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.cuehq.app"
            android:targetClass="com.cuehq.app.MainActivity"
            android:data="cue://reminder/create">
            <!-- Maps the reminder name/text -->
            <parameter
                android:name="thing.name"
                android:key="reminder_name"/>
            <!-- Maps the time (ISO 8601 format) -->
            <parameter
                android:name="thing.startDate"
                android:key="reminder_time"/>
        </intent>
    </capability>
    
    <!-- Quick shortcut to create a reminder (long-press icon) -->
    <shortcut
        android:shortcutId="create_reminder"
        android:enabled="true"
        android:icon="@drawable/ic_stat_logo"
        android:shortcutShortLabel="@string/shortcut_create_short"
        android:shortcutLongLabel="@string/shortcut_create_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.cuehq.app"
            android:targetClass="com.cuehq.app.MainActivity"
            android:data="cue://reminder/create" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    
    <!-- Quick shortcut to view today's reminders -->
    <shortcut
        android:shortcutId="view_today"
        android:enabled="true"
        android:icon="@drawable/ic_stat_logo"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.cuehq.app"
            android:targetClass="com.cuehq.app.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    
</shortcuts>
